Seeing if colon in title works

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Zenerian Chronicles - Shadow of Doom # maybe don't use a colon in the title?
+title: Zenerian Chronicles: Shadow of Doom # maybe don't use a colon in the title?
 show_downloads: false
 remote_theme: pages-themes/hacker@v0.2.0
 plugins:
